# cuda-cmake-multilibrary-compute-sample

./: CMakeLists.txt  LICENSE  README.md  sample.h.in
CUDA_MODULE/: CMakeLists.txt  cuda_module.c  cuda_module.cu  cuda_module.cuh  cuda_module.h  cuda_module_internal.h
includes/: sample_types.h
src/: common.c
